[workspace]
resolver = "3"
members = [
    "dioxus-leaflet",
    "dioxus-leaflet-core",
    "example",
]

[workspace.package]
version = "0.1.0-rc.1"
authors = ["Mykhailo Ziatin <mikhail.zyatin@gmail.com>"]

[workspace.dependencies]
dioxus = { version = "0.6.0" }

# General dependencies
async-std = "1.13.1"
uuid = { version = "1.16.0", default-features = false, features = ["v4"] }

# JS interoperation
serde = "1.0.219"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"

# Workspace members
[workspace.dependencies.dioxus-leaflet]
version = "0.1.0-rc.1"
path = "./dioxus-leaflet"

[workspace.dependencies.dioxus-leaflet-core]
version = "0.1.0-rc.1"
path = "./dioxus-leaflet-core"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"
